kubernetes/ingress-status.yaml
# Status Ingress:

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: status-ingress
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: /api/status
        backend:
          service:
            name: status-service
            port:
              number: 3002
  ingressClassName: nginx
